fix: overflow mobile

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,5 +1,10 @@
+#body {
+	overflow: hidden;
+}
+
 #view {
 	height: calc(100vh - 60px);
+	overflow: auto;
 }
 
 #content {
